--- a/app/src/main/res/layout/activity_signin.xml
+++ b/app/src/main/res/layout/activity_signin.xml
@@ -1,5 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:tools="http://schemas.android.com/tools"
+                xmlns:facebook="http://schemas.android.com/apk/res-auto"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 tools:context="com.hmmelton.textrack.SignInActivity"
@@ -11,15 +12,15 @@
         android:background="@android:color/darker_gray"
         android:alpha="0.5" />
 
-    <Button
+    <com.facebook.login.widget.LoginButton
         android:id="@+id/facebook_login_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/facebook_blue"
-        android:text="@string/fb_login"
-        android:textColor="@android:color/white"
+        android:textSize="16sp"
         android:paddingLeft="@dimen/button_padding"
         android:paddingRight="@dimen/button_padding"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:paddingBottom="@dimen/activity_vertical_margin"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"/>
 
