--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="facebook_blue">#3b5998</color>
 
     <color name="action_bar">#FFD4A9</color>
+
+    <color name="semi_black">#80000000</color>
 </resources>
