--- a/app/src/main/res/layout/activity_signin.xml
+++ b/app/src/main/res/layout/activity_signin.xml
@@ -2,7 +2,7 @@
                 xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                tools:context="com.hmmelton.textrack.SignInActivity"
+                tools:context="com.hmmelton.courseback.SignInActivity"
                 android:background="@drawable/books">
 
     <RelativeLayout
