created new style for inputs in AddBook dialog

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,4 +9,11 @@
 
     </style>
 
+    <!-- This style is used for inputs views in the AddBook dialog -->
+    <style name="AddBookInput">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:paddingLeft">@dimen/activity_horizontal_margin</item>
+    </style>
+
 </resources>
