books can now be added to the database

--- a/app/src/main/res/layout/fragment_navigation_drawer.xml
+++ b/app/src/main/res/layout/fragment_navigation_drawer.xml
@@ -2,7 +2,8 @@
                 xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                tools:context=".fragments.NavigationDrawerFragment">
+                tools:context=".fragments.NavigationDrawerFragment"
+                android:background="@android:color/white">
 
     <RelativeLayout
         android:id="@+id/nav_drawer_header"
@@ -10,10 +11,18 @@
         android:layout_height="wrap_content">
 
         <com.facebook.login.widget.ProfilePictureView
-            android:id="@+id/profilePic"
+            android:id="@+id/profile_pic"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"/>
+
+        <TextView
+            android:id="@+id/profile_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@id/profile_pic"
+            android:layout_centerInParent="true"
+            android:gravity="center"/>
 
     </RelativeLayout>
 
