changed color scheme and modified layout of user image/name in NavDrawer

--- a/app/src/main/res/layout/add_book_layout.xml
+++ b/app/src/main/res/layout/add_book_layout.xml
@@ -14,7 +14,7 @@
         android:textColor="@android:color/white"
         android:textSize="@dimen/book_cell_font_size"
         android:gravity="center"
-        android:background="@color/green"/>
+        android:background="@color/courseback_purple"/>
 
     <EditText
         android:id="@+id/add_book_title"
