--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -21,7 +21,7 @@
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="@dimen/activity_vertical_margin"
         android:layout_marginRight="@dimen/activity_horizontal_margin"
-        app:backgroundTint="@color/green" />
+        app:backgroundTint="@color/courseback_purple" />
 
     <ProgressBar
         android:id="@+id/main_progress_bar"
