--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="courseback_purple">#a782bf</color>
+    <color name="courseback_cream">#fae3c6</color>
+
     <color name="green">#4CAF50</color>
     <color name="facebook_blue">#3b5998</color>
 
