--- a/app/src/main/res/layout/fragment_navigation_drawer.xml
+++ b/app/src/main/res/layout/fragment_navigation_drawer.xml
@@ -4,7 +4,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 tools:context=".fragments.NavigationDrawerFragment"
-                android:background="@android:color/white">
+                android:background="@color/courseback_bg">
 
     <RelativeLayout
         android:id="@+id/nav_drawer_header"
@@ -41,6 +41,6 @@
         android:choiceMode="singleChoice"
         android:divider="@android:color/transparent"
         android:dividerHeight="0dp"
-        android:background="#cccc"/>
+        android:background="@color/courseback_bg"/>
 
 </RelativeLayout>
